[package]
name = "azdopr"
version = "0.1.0"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = ">0.0"
log = ">0.0"
serde = "1.0.110"
serde_json = "1.0.53"
serde_derive = "1.0.110"
anyhow = "1.0"

[dependencies.clap]
version = "2.33.1"
features = ["yaml"]

[dependencies.config]
version = "0.9"
features = ["yaml"]

[dependencies.reqwest]
version = "0.10.4"
features = ["json", "blocking"]
